RESOLVED FIXED196028
DumpRenderTree crashes under WebAnimation::isRelevant when running imported/mozilla/css-transitions/test_document-get-animations.html in GuardMalloc
https://bugs.webkit.org/show_bug.cgi?id=196028
Summary DumpRenderTree crashes under WebAnimation::isRelevant when running imported/m...
Antoine Quint
Reported 2019-03-20 13:27:06 PDT
DumpRenderTree crashes under WebAnimation::isRelevant when running imported/mozilla/css-transitions/test_document-get-animations.html in GuardMalloc.
Attachments
Patch (4.69 KB, patch)
2019-03-20 13:28 PDT, Antoine Quint
dino: review+
graouts: commit-queue+
Antoine Quint
Comment 1 2019-03-20 13:27:25 PDT
Antoine Quint
Comment 2 2019-03-20 13:28:36 PDT
Antoine Quint
Comment 3 2019-03-20 17:14:08 PDT
Note You need to log in before you can comment on or make changes to this bug.